# wasmedge_hostfunctionexample_interface

./: Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: main.rs
src/: lib.rs
