[package]
name = "wasmedge_hostfunctionexample_interface"
version = "1.0.0"
authors = ["hydai <hydai@secondstate.io>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/second-state/wasmedge_hostfunctionexample_interface"
license-file = "LICENSE"
description = "A Rust library that provides Rust to WebAssembly developers with syntax for running wasmedge self-defined host functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmedge_hostfunctionexample_interface"
path = "src/lib.rs"
